fix: footer and layout padding adjusted so footer does not overlap with mainContent

--- a/styles/components/layout.module.scss
+++ b/styles/components/layout.module.scss
@@ -1,10 +1,11 @@
 .page {
   position: relative;
   min-height: 100vh;
+  height: 100%;
 }
 
 .mainContent {
   display: flex;
   justify-content: center;
-  padding-bottom: 5rem;
+  padding-bottom: 8rem;
 }
